# FKQQ_nonebot

./: .env  README.md  bot.py  install_plugin.sh  pyproject.toml
src/plugins/nonebot-plugin-petpet-0.3.x/nonebot_plugin_petpet/: data_source.py
src/plugins/nonebot_plugin_petpet/: download.py
