[tool.poetry]
name = "FKQQ_nonebot"
version = "0.1.0"
description = "FKQQ_nonebot"
authors = []
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.poetry.dependencies]
python = "^3.9.5"
nonebot2 = "^2.0.0-beta.3"
nonebot-adapter-onebot = "2.1.0"
lxml = "^4.9.0"
psutil = "^5.9.1"
utils = "^1.0.1"
httpx = ">=0.19.0"
imageio = "^2.12.0"
Pillow = "^9.0.0"
nonebot-plugin-imageutils = "^0.1.4"
nonebot-plugin-htmlrender = ">=0.0.4.3"
pydantic = "^1.5.0"
Jinja2 = "^3.0.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = []
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

